# charlie-finance

./: .env.example  .gitignore  charlie.bat  crown-macro-dashboard-guide.md  pyproject.toml
.claude/: settings.local.json
config/: alerts.yaml  calendar.yaml  etf_flows.yaml  sentiment.yaml  series.yaml  stocktwits.yaml  tickers.yaml
scripts/: daily_update.py  fetch.py  generate_report.py  init_db.py  run_dashboard.py  screenshot.py
src/charlie/: config.py
src/charlie/analysis/: alerts.py  calendar.py  composite.py  derived.py  insights.py  notify.py  regime.py  report.py  sentiment.py  stats.py
src/charlie/ingest/: cboe.py  cftc.py  etf_flows.py  fred.py  sentiment.py  stocktwits.py  yahoo.py
src/charlie/storage/: db.py  models.py
src/charlie/viz/: charts.py  dashboard.py
tests/: test_composite.py  test_config.py  test_derived.py  test_regime.py  test_stats.py  test_storage.py
